--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,12 +1,6 @@
-apiVersion: skaffold/v2alpha3
+apiVersion: skaffold/v3
 kind: Config
-deploy:
-  kubectl:
-    manifests:
-      - ./infra/k8s/*
 build:
-  local:
-    push: false
   artifacts:
     - image: docker.io/ordamari/auth
       context: auth
@@ -16,3 +10,24 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: docker.io/ordamari/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
+          - src: "src/**/*.tsx"
+            dest: .
+          - src: "**/*.js"
+            dest: .
+          - src: "src/**/*.scss"
+            dest: .
+  local:
+    push: false
+manifests:
+  rawYaml:
+    - ./infra/k8s/*
+deploy:
+  kubectl: {}
