--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,12 @@
     "titleBar.activeBackground": "#464025",
     "titleBar.activeForeground": "#FBFBF8"
   },
-  "cSpell.words": ["middlewares", "ordamari", "signout"]
+  "cSpell.words": [
+    "cssvariables",
+    "middlewares",
+    "ordamari",
+    "signout",
+    "Signup",
+    "svgs"
+  ]
 }
