--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "axios": "^1.4.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
