--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -24,6 +24,14 @@ build:
             dest: .
           - src: "src/**/*.scss"
             dest: .
+    - image: docker.io/ordamari/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
   local:
     push: false
 manifests:
