add nats streaming conf to common service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,17 @@
 {
-  "workbench.colorCustomizations": {
-    "activityBar.background": "#322D1B",
-    "titleBar.activeBackground": "#464025",
-    "titleBar.activeForeground": "#FBFBF8"
-  },
-  "cSpell.words": [
-    "cssvariables",
-    "middlewares",
-    "ordamari",
-    "ordamaritickets",
-    "signout",
-    "Signup",
-    "svgs"
-  ]
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#322D1B",
+        "titleBar.activeBackground": "#464025",
+        "titleBar.activeForeground": "#FBFBF8"
+    },
+    "cSpell.words": [
+        "cssvariables",
+        "middlewares",
+        "nats",
+        "ordamari",
+        "ordamaritickets",
+        "signout",
+        "Signup",
+        "svgs"
+    ]
 }
