--- a/orders/package.json
+++ b/orders/package.json
@@ -18,7 +18,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@ordamaritickets/common": "^1.0.8",
+        "@ordamaritickets/common": "^1.0.11",
         "@types/cookie-session": "^2.0.44",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.2",
@@ -28,6 +28,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.2",
+        "mongoose-update-if-current": "^1.4.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
     },
