--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tickets",
+    "name": "payments",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -29,6 +29,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.2",
         "mongoose-update-if-current": "^1.4.0",
+        "stripe": "^12.11.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
     },
