--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@svgr/webpack": "^8.0.1",
     "axios": "^1.4.0",
     "next": "^13.4.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.63.2"
   },
   "devDependencies": {
